# NJUNexusSDK-

./: .gitignore  CLAUDE.md  README.md
sdk/nexus-sdk-release-20260611_092856/human_data/: CMakeLists.txt  package.xml
sdk/nexus-sdk-release-20260611_092856/human_data/config/: ar5_suction_cup_human_data_config.yaml  nexus-arm_human_data_config.yaml
sdk/nexus-sdk-release-20260611_092856/human_data/lib/x86_64/human_data/: human_data_solver_node
sdk/nexus-sdk-release-20260611_092856/human_data/urdf/: nexus-arm-v05.urdf  nexus-arm-v15-right.urdf
sdk/nexus-sdk-release-20260611_092856/infra_msg/: package.xml
sdk/nexus-sdk-release-20260611_092856/infra_msg/msg/: CartesianImpedance.msg  EndPoseCmd.msg  HumanDataInterface.msg  TeleOpArmStatus.msg
sdk/nexus-sdk-release-20260611_092856/infra_msg/srv/: ControllerConfig.srv  InferenceConfig.srv  SetOperatorStatus.srv
sdk/nexus-sdk-release-20260611_092856/nexus_manage/: package.xml
sdk/nexus-sdk-release-20260611_092856/nexus_manage/include/common/thread/: rt_thread.hpp
sdk/nexus-sdk-release-20260611_092856/nexus_manage/include/nexus_manage/components/: inference_config_component.hpp  key_detector_component.hpp  rotation_mapping.hpp
sdk/nexus-sdk-release-20260611_092856/nexus_manage/launch/: nexus_arm_v15_right_to_ar5_08l_suction_cup_real_system.launch.py  nexus_arm_v15_right_to_ar5_08l_suction_cup_real_system_cross_subnet.launch.py  nexus_arm_v15_right_to_fr3v2_1_hand_real_system_cross_subnet.launch.py  nexus_nexus-arm_to_y1_manage.launch.py  nexus_nexus-arm_v15_right_to_ar5_08l_suction_cup_manage.launch.py  nexus_nexus-arm_v15_right_to_ar5_suction_cup_manage.launch.py  nexus_nexus-arm_v15_right_to_fr3v2_1_hand_manage.launch.py  nexus_nexus-arm_v15_right_to_y1_manage.launch.py
sdk/nexus-sdk-release-20260611_092856/teleop_adapter/: package.xml
sdk/nexus-sdk-release-20260611_092856/teleop_adapter/config/: master_y1_single.yaml  slave_ar5_08l_suction_cup_single.yaml
sdk/nexus-sdk-release-20260611_092856/teleop_adapter/launch/: README.md  master_nexus_single.launch.py  slave_ar5_08l_suction_cup_single.launch.py  slave_ar5_single.launch.py
sdk/nexus-sdk-release-20260611_092856/teleop_adapter/src/adapters/: teleop_arm_adapter.cpp
sdk/nexus-sdk-release-20260611_092856/teleop_adapter/urdf/: y1_with_gripper.urdf
sdk/src/mujoco_sim/: package.xml  setup.py
sdk/src/mujoco_sim/config/: ar5_08l_suction_cup_mujoco_sim.yaml  ar5_gripper_mujoco_sim.yaml  fr3v2_1_hand_mujoco_sim.yaml  mujoco_sim.yaml  nexus_arm_mujoco_sim.yaml  nexus_arm_v15_right_mujoco_sim.yaml  y1_master_mujoco_sim.yaml
sdk/src/mujoco_sim/launch/: a2_tabletop_sim.launch.py  ar5_gripper_sim.launch.py  y1_dual_sim.launch.py
sdk/src/mujoco_sim/mujoco_sim/tools/: joint_control_interactive.py
sdk/src/mujoco_sim/robot_description/AR5-5_08L-W4C4A6-ZY2_description20260511/: package.xml
sdk/src/mujoco_sim/scripts/: compose_ar5_08l_from_sw_suction_urdf.py  compose_ar5_08l_suction_cup_urdf.py  patch_ar5_08l_suction_mjcf_inertial.py  urdf_to_mjcf.py
sdk/src/mujoco_sim/scripts/ar5_gripper/: README.md  test_ar5_dataflow.py
sdk/src/nexus_manage/: CMakeLists.txt
sdk/src/nexus_manage/config/: nexus-arm_to_y1_manage.yaml  nexus-arm_v15_right_to_ar5_08l_suction_cup_manage.yaml  nexus-arm_v15_right_to_ar5_manage.yaml  nexus-arm_v15_right_to_fr3v2_1_hand_manage.yaml  teleop_manager_all.yaml
sdk/src/nexus_manage/include/common/: README.md
sdk/src/nexus_manage/launch/: nexus_arm_to_y1_real_data_collector_system.launch.py  nexus_arm_to_y1_real_system.launch.py  nexus_arm_v15_right_to_ar5_real_system.launch.py  nexus_arm_v15_right_to_fr3v2_1_hand_real_system.launch.py  nexus_arm_v15_right_to_fr3v2_1_hand_sim_system.launch.py  nexus_arm_v15_right_to_y1_real_system.launch.py  nexus_manage.launch.py  nexus_nexus-arm_v15_right_to_ar5_manage.launch.py  nexus_system.launch.py  slave_registry.py
sdk/src/robot_controller/: CMakeLists.txt  package.xml
sdk/src/robot_controller/config/: arm_control_ar5.yaml  arm_control_ar5_08l_suction_cup.yaml  arm_control_ar5_suction_cup.yaml  arm_control_fr3v2_1_hand.yaml  gripper_config_ar5_08l_suction_cup.yaml  gripper_config_nexus.yaml  gripper_config_nexus_v15_right.yaml  master_arm_control_nexus.yaml  master_dual_y1_config.yaml  master_single_nexus_config.yaml  master_single_nexus_v15_right_config.yaml  slave_single_ar5_08l_suction_cup_config.yaml  slave_single_ar5_config.yaml  slave_single_ar5_gripper_config.yaml  slave_single_y1_config.yaml
sdk/src/robot_controller/launch/: slave_single_ar5_gripper.launch.py
sdk/src/robot_controller/lib/x86_64/: libOsqpEigen.so.0.11.0
sdk/src/robot_controller/specs/: friction_coulomb_nexus_comparison.txt  friction_coulomb_y1.txt  gripper_stroke_table_nexus.txt  gripper_stroke_table_nexus_v15_right.txt
sdk/src/robot_controller/urdf/: AR5-5_07L-W4C4A2.urdf  AR5_gripper.urdf  dual_y1_with_gripper.urdf  nexus-arm.urdf  nexus-arm_v05.urdf
src/gripper_keyboard/: CMakeLists.txt  README.md
src/gripper_keyboard/launch/: left_gripper.launch.py
src/gripper_keyboard/src/: qwer_keyboard_node.cpp
src/infra_msg/: CMakeLists.txt
src/infra_msg/msg/: EndPoseData.msg  GripperKeyState.msg  JointMitControl.msg
src/infra_msg/srv/: CollectorService.srv
src/teleop_adapter/: CMakeLists.txt  README.md  package.xml
src/teleop_adapter/config/: master_nexus_single.yaml  slave_ar5_gripper_single.yaml  slave_ar5_single.yaml  slave_ar5_suction_cup_single.yaml  slave_fr3v2_1_hand_single.yaml  slave_y1_single.yaml
src/teleop_adapter/include/teleop_adapter/adapters/: ar5_suction_cup_adapter.hpp  device_adapter.hpp
src/teleop_adapter/include/teleop_adapter/communication/: dummy_communication_interface.hpp
src/teleop_adapter/launch/: master_nexus_single.launch.py  master_y1_single.launch.py  slave_ar5_gripper_single.launch.py  slave_ar5_single.launch.py  slave_ar5_suction_cup_single.launch.py  slave_y1_single.launch.py
src/teleop_adapter/lib/x86_64/teleop_adapter/: teleop_arm_driver_main
src/teleop_adapter/src/adapters/: device_adapter.cpp
src/teleop_adapter/src/peripherals/: remote_client.cpp
(+326 files in other folders)
