<?xml version="1.0"?>
<package format="3">
  <name>teleop_adapter</name>
  <version>0.0.0</version>
  <description>Adapters that map teleoperation devices to unified ROS topics (C++ implementation) (prebuilt)</description>
  <maintainer email="infra@pegasus-ai.cn">Infra Embedded</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>infra_msg</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
