<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>infra_msg</name>
  <version>0.0.0</version>
  <description>ros2 message package (renamed from teleop_msg)</description>

  <maintainer email="jianghu@pegasus-ai.cn">Jiang Hu</maintainer>
  <license>Business</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <!-- Ensure runtime type support hooks are present when sourced -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


