<?xml version="1.0"?>
<package format="3">
  <name>nexus_manage</name>
  <version>0.1.0</version>
  <description>Robot application layer nodes including teleop manager (prebuilt)</description>
  <maintainer email="infra@pegasus-ai.cn">Infra Embedded</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>infra_msg</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
