<?xml version="1.0"?>
<package format="3">
	<name>teleop_adapter</name>
	<version>0.0.0</version>
	<description>Adapters that map teleoperation devices to unified ROS topics (C++ implementation)</description>

	<maintainer email="jianghu@pegasus-ai.cn">Jiang Hu</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<build_depend>rclcpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>infra_msg</build_depend>
	<build_depend>ament_index_cpp</build_depend>

	<exec_depend>rclcpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>infra_msg</exec_depend>
	<exec_depend>ament_index_cpp</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
